<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.artelnatif</groupId>
    <artifactId>nicko-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>Nicko</name>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>dist</module>
        <module>v1_13_R1</module>
        <module>v1_13_R2</module>
        <module>v1_14_R1</module>
        <module>v1_15_R1</module>
        <module>v1_16_R1</module>
        <module>v1_16_R2</module>
        <module>v1_16_R3</module>
        <module>v1_17_R1</module>
        <module>v1_18_R1</module>
        <module>v1_18_R2</module>
        <module>v1_19_R1</module>
        <module>v1_19_R2</module>
    </modules>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
</project>